--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -19,7 +19,8 @@
                 </div>
                 <ul class="nav-item">
                     <li>
-                        <button class="btn" type="button" onclick="location.href='@Url.Action("Index", "Product")'">
+                        @*<button class="btn" type="button" onclick="location.href='@Url.Action("Index", "Product")'">*@
+                         <button class="btn" type="button" href="/shop.html">
                             <i class="fa-solid fa-laptop"></i>
                             Laptop
                         </button>
