--- a/RoboTech/Areas/Admin/Views/AdminProducts/Create.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminProducts/Create.cshtml
@@ -81,13 +81,13 @@
                                     </div>
                                     <label>HomeFlag</label>
                                 </div>*@
-                                <div class="form-group d-flex align-items-center">
+                                @*<div class="form-group d-flex align-items-center">
                                     <div class="switch m-r-10">
                                         <input type="checkbox"asp-for="Status">
                                         <label for="Status"></label>
                                     </div>
                                     <label>Status</label>
-                                </div>
+                                </div>*@
 
                             </div>
                         </div>
