--- a/RoboTech/Views/Shared/_LayoutAccount.cshtml
+++ b/RoboTech/Views/Shared/_LayoutAccount.cshtml
@@ -18,5 +18,6 @@
         @RenderBody()
     </div>
     <script src="~/js/script_login.js"></script>
+    @await Component.InvokeAsync("Notyf")
 </body>
 </html>
