--- a/RoboTech/Areas/Admin/Views/AdminAccounts/Delete.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminAccounts/Delete.cshtml
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.LastLogin)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
+            @Html.DisplayNameFor(model => model.CreateDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
+            @Html.DisplayFor(model => model.CreateDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Active)
