--- a/RoboTech/Areas/Admin/Views/AdminCustomers/Edit.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminCustomers/Edit.cshtml
@@ -36,9 +36,9 @@
             </div>
        
             <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
+                <label asp-for="CreateDate" class="control-label"></label>
+                <input asp-for="CreateDate" class="form-control" />
+                <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
