--- a/RoboTech/Areas/Admin/Views/AdminCategories/Details.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminCategories/Details.cshtml
@@ -17,7 +17,7 @@
     <div class="d-md-flex m-b-15 align-items-center justify-content-between">
         <div class="media align-items-center m-b-15">
             <div class="avatar avatar-image rounded" style="height:70px; width:70px">
-                @*<img src="~/images/category/@Model.Thumb" alt="@Model.Title" />*@
+                <img src="~/images/category/@Model.Thumb" alt="@Model.Name" />
             </div>
             <div class="m-l-15">
                 <h4 class="m-b-0">@Model.Name</h4>
